Fix map layers not showing

--- a/src/App.css
+++ b/src/App.css
@@ -210,3 +210,14 @@
 .leaflet-container {
   @apply bg-zinc-900 !important;
 }
+.leaflet-control-layers-overlays {
+  @apply select-none;
+}
+.leaflet-pane {
+  @apply z-0 !important;
+}
+.leafletImageOverlayLayer {
+  img {
+    @apply z-[999] h-full w-full !important;
+  }
+}
